--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "android-image-flashing-template"]
 	path = android-image-flashing-template
 	url = https://github.com/droidian-releng/android-image-flashing-template.git
+[submodule "rootfs-templates/"]
+	url = https://github.com/erikinkinen/rootfs-templates.git
+	branch = master
