--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -163,6 +163,10 @@ jobs:
           name: droidian-out-${{ matrix.config.product }}-${{ matrix.config.arch }}-${{ matrix.config.edition }}-${{ matrix.config.variant }}-${{ matrix.config.apilevel }}
           path: droidian-out
 
+      - name: Copy img files
+        run: |
+          cp droidian-out/droidian-OFFICIAL*.zip droidian-out/droidian-OFFICIAL_${{ matrix.config.product }}-${{ matrix.config.arch }}-${{ matrix.config.edition }}-${{ matrix.config.variant }}-${{ matrix.config.apilevel }}.zip
+
       - name: Create stable release (drafted)
         id: create_release
         if: startsWith(github.ref, 'refs/tags/droidian')
