--- a/devices.yml
+++ b/devices.yml
@@ -27,6 +27,11 @@
     - adaptation-google-sargo
     - adaptation-google-sargo-configs
 
+.volla_mimameid_packages:
+  packages: &volla_mimameid_packages
+    - adaptation-volla-mimameid
+    - adaptation-volla-mimameid-configs
+
 .volla_yggdrasil_packages:
   packages: &volla_yggdrasil_packages
     - adaptation-volla-yggdrasil
@@ -117,6 +122,19 @@ sony_bahamut:
 
   packages: *sony_bahamut_packages
 
+#
+# Google
+#
+
+# Google Pixel 3a (sargo)
+google_sargo:
+  type: image
+  arch: arm64
+  edition: cutie
+  variant: phone
+  apilevel: 28
+
+  packages: *google_sargo_packages
 
 #
 # Volla
@@ -132,17 +150,12 @@ volla_yggdrasil:
 
   packages: *volla_yggdrasil_packages
 
-
-#
-# Google
-#
-
-# Google Pixel 3a (sargo)
-google_sargo:
+# Volla Phone 22 (mimameid)
+volla_mimameid:
   type: image
   arch: arm64
   edition: cutie
   variant: phone
-  apilevel: 28
+  apilevel: 30
 
-  packages: *google_sargo_packages
+  packages: *volla_mimameid_packages
