--- a/devices.yml
+++ b/devices.yml
@@ -47,6 +47,11 @@
     - adaptation-xiaomi-miatoll
     - adaptation-miatoll-configs
 
+.samsung_starqlte_packages:
+  packages: &samsung_starqlte_packages
+    - adaptation-droidian-starqlte
+    - adaptation-starqlte-configs
+
 ########################################################################
 # Recovery-flashable rootfses                                          #
 ########################################################################
@@ -193,3 +198,17 @@ xiaomi_miatoll:
   apilevel: 29
 
   packages: *xiaomi_miatoll_packages
+
+#
+# Samsung
+#
+
+# Samsung Galaxy S9 (Qualcomm) (starqlte)
+samsung_starqlte:
+  type: image
+  arch: arm64
+  edition: cutie
+  variant: phone
+  apilevel: 29
+
+  packages: *samsung_starqlte_packages
