workflow: free up some storage to allow images to download successfully
github has a limited amount of storage which we're exceeding so the run fails after adding one more device so lets free up some storage for it to not fail using the free-disk-space workflow

this workflow has been tested and proven to work on manjaro which generates a lot of images for a lot iof devices which also had this storage issue.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -93,6 +93,16 @@ jobs:
       upload_url: ${{ steps.create_release.outputs.upload_url }}${{ steps.create_nightly.outputs.upload_url }}
 
     steps:
+      - name: Free up some storage
+        uses: jlumbroso/free-disk-space@main
+        with:
+          tool-cache: true
+          android: true
+          dotnet: true
+          haskell: true
+          large-packages: true
+          swap-storage: true
+
       - name: Delete old nightly release
         uses: dev-drprasad/delete-tag-and-release@v0.2.1
         if: startsWith(github.ref, 'refs/tags/droidian') != true
