--- a/devices.yml
+++ b/devices.yml
@@ -182,7 +182,7 @@ volla_yggdrasil:
 
 # Volla Phone 22 (mimameid)
 volla_mimameid:
-  type: image
+  type: rootfs
   arch: arm64
   edition: cutie
   variant: phone
