--- a/devices.yml
+++ b/devices.yml
@@ -27,10 +27,10 @@
     - adaptation-google-sargo
     - adaptation-google-sargo-configs
 
-#.volla_mimameid_packages:
-#  packages: &volla_mimameid_packages
-#    - adaptation-volla-mimameid
-#    - adaptation-volla-mimameid-configs
+.volla_mimameid_packages:
+  packages: &volla_mimameid_packages
+    - adaptation-volla-mimameid
+    - adaptation-volla-mimameid-configs
 
 .volla_yggdrasil_packages:
   packages: &volla_yggdrasil_packages
@@ -181,14 +181,14 @@ volla_yggdrasil:
   packages: *volla_yggdrasil_packages
 
 # Volla Phone 22 (mimameid)
-#volla_mimameid:
-#  type: image
-#  arch: arm64
-#  edition: cutie
-#  variant: phone
-#  apilevel: 30
+volla_mimameid:
+  type: image
+  arch: arm64
+  edition: cutie
+  variant: phone
+  apilevel: 30
 
-#  packages: *volla_mimameid_packages
+  packages: *volla_mimameid_packages
 
 #
 # Xiaomi
